sjengida/c0/Rook
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/Rook/src/neval.c:760:12: error: use of undeclared identifier 'Rook_square_d1'
if ( sq == Rook_square_d1[c] ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/Rook/src/neval.c:763:14: error: use of undeclared identifier 'Rook_square_d1'
if ( ( board[Rook_square_d1[c] + 1] + 1) >> 1 == 4 
             ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/Rook/src/neval.c:764:32: error: use of undeclared identifier 'Rook_square_d1'
&& ( ( ( unsigned __int8)board[Rook_square_d1[c] + 1] + 1) & 1) == c ) 
                               ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/Rook/src/neval.c:769:12: error: use of undeclared identifier 'Rook_square_d1'
if ( sq == Rook_square_d1[c] + 1 ) 
           ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/Rook/src/obj/neval.o] Error 1
